<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/nohp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/telephone" />

        <TextView
            android:id="@+id/txtnohp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_alignParentStart="true"
            android:layout_marginStart="85dp"
            android:layout_marginTop="-28dp"
            android:text="@string/Nohp"
            android:textSize="20dp"
            android:onClick="nohp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/icon"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="91dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/paper_plane" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="89dp"
            android:layout_marginTop="-28dp"
            android:text="@string/email"
            android:textSize="20dp"
            android:onClick="email"

            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/icon"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="161dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/instagram_photo_camera_logo_outline" />

        <TextView
            android:id="@+id/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="89dp"
            android:layout_marginTop="43dp"
            android:text="@string/instagram"
            android:textSize="20dp"
            android:onClick="ig"

            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/icon"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/www" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="90dp"
            android:layout_marginTop="106dp"
            android:text="@string/website"
            android:textSize="20dp"
            android:onClick="website"
            android:id="@+id/website"
            android:textStyle="bold" />

    </RelativeLayout>


</FrameLayout>