<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="match_parent"
            android:layout_height="297dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"

            android:layout_marginTop="0dp"
            android:background="@drawable/profile_picture"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


        <Button
            android:id="@+id/rectangle"
            android:layout_width="175dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="117dp"
            android:layout_marginTop="217dp"
            android:layout_marginEnd="119dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/follow"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="225dp" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="138dp"
            android:layout_marginTop="255dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="8dp"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="@string/followers"
            android:textColor="@color/colorPrimary"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/estertambunan"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="147dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="148dp"
            android:gravity="top"
            android:text="@string/ester_tambunan"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/ceo"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="163dp"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="130dp"
            android:gravity="top"
            android:text="@string/ceo"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/estertambunan"
            tools:ignore="MissingConstraints" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="73dp"

            android:layout_marginEnd="8dp"
            android:src="@drawable/estert"
            app:civ_border_color="#ffffff"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toTopOf="@+id/rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ceo"
            tools:ignore="MissingConstraints" />



        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_below="@id/img_bg"

            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.TabLayout
                    android:id="@+id/result_tabs"
                    android:background="@color/colorPrimary"
                    app:tabTextColor="@color/grey"
                    app:tabSelectedTextColor="@color/colorNavigationText"
                    app:tabIndicatorColor="@color/colorNavigationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabMode="fixed"/>
            </android.support.design.widget.AppBarLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </android.support.design.widget.CoordinatorLayout>



    </RelativeLayout>

</FrameLayout>